# haskellbook

./: .gitignore  haskell-book.cabal  readme.md
chp02/: README.md  learn.hs  test.hs
chp02/examples/: waxon.hs
chp02/exercises/: 2.4.exercises.2.hs  let-to-when.hs
chp03/examples/: print2.hs  print3.hs  print3broken.hs  print3flipped.hs
chp03/exercices/: 3.7.BuildiongFunctions.hs  3.7.Reverse.hs  exercises.md
chp04/exercises/: 4.2.changeMood.hs  4.7.ChapterExercises.md  4.7.CorrectingSyntax.md  4.7.MatchTheFunctionsToTheirTypes.md  4.7.abs.hs  4.7.f.hs  exercises.md  palindrome.hs
chp05/exercises/: arith3broken.hs  exercises.md  functionForType.hs  parametricity.hs  sing.hs  typeSignature.hs
chp06/exercises/: electricTypealoo.hs  exercises.md  matchTheTypes.hs
chp07/examples/: arith2.hs
chp07/exercises/: arith4.hs  artfulDodgy.hs  casePractice.hs  exercises.md  fillDefinition.hs  foldBool.hs  grabBag.hs  guardDuty.hs  tensDigit.hs
chp08/exercises/: divideBy.hs  exercises.md  recursion.hs  wordNumber.hs
chp09/exercises/: IsItInNormalForm.hs  bottomMadness.hs  cipher.hs  dataChar.hs  enumFromTo.hs  exrcises.md  foldBool.hs  poemLines.hs  splitString.hs  squareCube.hs  standardFunctions.hs  thyFearfulSymmetry.hs  zippingExercises.hs
chp10/exercises/: databaseProcessing.hs  exercises.md  rewritingFunctionsUsingFolds.hs  scans.hs  warmUpAndReview.hs
chp11/exercises/: asPatterns.hs  cipher.hs  constructingValues.hs  dogTypes.hs  exercises.md  garden.hs  huttonsRazor.hs  language.hs  (+8 more)
chp14/examples/morsecode/: morsecode.cabal  stack.yaml
chp14/examples/morsecode/src/: Main.hs  Morse.hs
chp14/examples/morsecode/test/: Spec.hs
(+118 files in other folders)
